recursion.cons.lessons.recursion.cons.Increasing.scala.error
increasing:3: error: not found: value tail
	if(l.head <= l.head::tail)
                             ^