recursion.cons.lessons.recursion.cons.Increasing.scala.code
def increasing(l:List[Int]): Boolean = {

	if(l.head <= l.head::tail)
		return true;
	else
		return false;

	return increasing(l.tail);
}
